# kubys-library-management-system

./: .gitignore  CMakeLists.txt  README.md
docs/: SUNUM_NOTLARI.md
include/: depo.h  dosya_islemleri.h  faz1_sorgular.h  varliklar.h
src/: ag_istemci.cpp  ag_istemci.h  arka_plan_isci.cpp  arka_plan_isci.h  faz1_demo.cpp  kitap_dialog.cpp  kitap_dialog.h  kitap_model.cpp  kitap_model.h  kutuphane_sunucu.cpp  kutuphane_sunucu.h  main.cpp  main_window.cpp  main_window.h  odunc_dialog.cpp  odunc_dialog.h  odunc_model.cpp  odunc_model.h  uye_dialog.cpp  uye_dialog.h  uye_model.cpp  uye_model.h
